syntax = "proto3";

package game;

enum Race {
    RACE_NONE = 0;
    RACE_HUMAN = 1;
    RACE_ORC = 2;
    RACE_DWARF = 3;
    RACE_NIGHT_ELF = 4;
    RACE_UNDEAD = 5;
    RACE_TAUREN = 6;
    RACE_GNOME = 7;
    RACE_TROLL = 8;
}

// Definition for WoWObject
message WoWObject {
    uint64 guid = 1;
    uint32 mapId = 2;
    uint32 zoneId = 3;
    uint32 objectType = 4;
    float scaleX = 5;
    float height = 6;
    float facing = 7;
    Position position = 8;
}

// Definition for WoWGameObject, extending WoWObject
message WoWGameObject {
    WoWObject base = 1; // Composition for inheritance
    uint32 goState = 2;
    uint32 level = 3;
    uint32 factionTemplate = 4;
    uint32 displayId = 5;
    uint32 flags = 6;
    uint32 dynamicFlags = 7;
    string name = 8;
    uint32 entry = 9;
    uint32 gameObjectType = 10;   // Door=0, Button=1, QuestGiver=2, etc.
    uint32 artKit = 11;
    uint32 animProgress = 12;
}

// Definition for WoWUnit, extending WoWGameObject
message WoWUnit {
    WoWGameObject gameObject = 1; // Composition for inheritance
    uint64 charm = 2;
    uint64 summon = 3;
    uint64 charmedBy = 4;
    uint64 summonedBy = 5;
    uint64 createdBy = 6;
    uint64 targetGuid = 7;
    uint64 persuaded = 8;
    uint64 channelObject = 9;
    uint32 channelSpellId = 10;
    uint32 health = 11;
    uint32 maxHealth = 12;
    map<uint32, uint32> power = 13;
    map<uint32, uint32> maxPower = 14;
    map<uint32, uint32> stats = 15;
    map<uint32, uint32> resistances = 16;
    uint32 bytes0 = 17;
    uint32 bytes1 = 18;
    uint32 bytes2 = 19;
    uint32 mountDisplayId = 20;
    uint32 unitFlags = 21;
    uint32 movementFlags = 22;
    uint32 dynamicFlags = 23;
    uint32 npcFlags = 24;
    repeated uint32 auras = 25;
    repeated uint32 auraFlags = 26;
    repeated uint32 auraLevels = 27;
    repeated uint32 auraApplications = 28;
    uint32 auraState = 29;
    uint32 petNumber = 30;
}

// Definition for WoWPlayer, extending WoWUnit
message WoWPlayer {
    WoWUnit unit = 1; 
    uint32 playerBytes0 = 2;
    uint32 playerBytes1 = 3;
    uint32 playerBytes2 = 4;
    uint32 playerFlags = 5;
    repeated QuestLogEntry questLogEntries = 6;
    map<uint32, uint64> inventory = 7;
    map<uint32, uint32> bagContents = 8;
    map<uint32, uint32> keyRing = 9;
    uint64 farsightGuid = 10;
    uint64 comboTargetGuid = 11;
    uint32 playerXP = 12;
    map<uint32, uint32> skillInfo = 13;
    repeated uint32 spellList = 14;
    map<uint32, float> spellCooldowns = 15;
    map<uint32, uint32> spellStacks = 16;
    map<uint32, float> buffList = 17;
    uint32 characterPoints1 = 18;
    uint32 characterPoints2 = 19;
    uint32 trackCreatures = 20;
    uint32 trackResources = 21;
    float blockPercent = 22;
    float dodgePercent = 23;
    float parryPercent = 24;
    float critPercent = 25;
    float rangedCritPercent = 26;
    map<uint32, uint32> exploredZones = 27;
    uint32 restStateExperience = 28;
    uint32 coinage = 29;
    uint32 posModDamageDone = 30;
    uint32 negModDamageDone = 31;
    uint32 pctModDamageDone = 32;
    map<uint32, uint32> posStats = 33;
    map<uint32, uint32> negStats = 34;
    map<uint32, uint32> posResistBuff = 35;
    map<uint32, uint32> negResistBuff = 36;
    uint32 ammoId = 37;
    uint32 selfResSpell = 38;
    uint32 pvpMedals = 39;
    uint32 sessionKills = 40;
    uint32 watchedFactionIndex = 41;
    map<uint32, uint32> combatRating = 42;
}

// Reusable message for WoWItem, extending WoWGameObject
message WoWItem {
    WoWGameObject gameObject = 1;
    uint64 owner = 2;
    uint64 contained = 3;
    uint64 creator = 4;
    uint64 giftCreator = 5;
    uint32 stackCount = 6;
    uint32 duration = 7;
    map<uint32, uint32> spellCharges = 8;
    uint32 itemFlags = 9;
    map<uint32, uint32> enchantments = 10;
    uint32 durability = 11;
    uint32 propertySeed = 12;
    uint32 randomPropertiesId = 13;
}

// Reusable message for WoWContainer, extending WoWItem
message WoWContainer {
    WoWItem item = 1;
    repeated uint32 itemSlots = 2;
}

// Definition for QuestLogEntry
message QuestLogEntry {
    uint32 questLog1 = 1;
    uint32 questLog2 = 2;
    uint32 questLog3 = 3;
}

message Position {
    float x = 1;
    float y = 2;
    float z = 3;
}

// Snapshot of a nearby game object captured during a movement recording frame.
// Useful for transport physics (elevators, boats, zeppelins) and collision objects.
message GameObjectSnapshot {
    uint64 guid = 1;
    uint32 entry = 2;              // DB template entry ID
    uint32 displayId = 3;
    uint32 gameObjectType = 4;     // 0=Door, 1=Button, 11=Transport, 15=MoTransport, etc.
    uint32 flags = 5;
    uint32 goState = 6;            // 0=Active, 1=Ready, 2=Deactivated
    Position position = 7;         // World position
    float facing = 8;
    string name = 9;
    float distanceToPlayer = 10;   // Yards from player to this object
}

// Snapshot of a nearby unit (NPC or other player) for pathing/collision validation.
message UnitSnapshot {
    uint64 guid = 1;
    uint32 entry = 2;              // Creature template entry ID (0 for players)
    string name = 3;
    Position position = 4;         // World position
    float facing = 5;
    uint32 movementFlags = 6;      // Unit's movement flags
    uint32 health = 7;
    uint32 maxHealth = 8;
    uint32 level = 9;
    uint32 unitFlags = 10;         // UnitFlags (in combat, stunned, etc.)
    float distanceToPlayer = 11;   // Yards from player
    float boundingRadius = 12;     // Collision radius
    float combatReach = 13;
    uint32 npcFlags = 14;          // Vendor, quest giver, etc.
    uint64 targetGuid = 15;        // Who this unit is targeting
    bool isPlayer = 16;            // True if WoWPlayer, false if NPC
    bool hasSpline = 17;            // True if MoveSpline pointer is non-zero or MOVEFLAG_SPLINE_ENABLED
    uint32 splineFlags = 18;        // MoveSpline flags (when hasSpline=true)
    int32 splineTimePassed = 19;    // How far along the spline (ms)
    int32 splineDuration = 20;      // Total spline duration (ms)
    Position splineFinalDestination = 21; // Where the spline ends
    uint32 splineNodeCount = 22;    // Number of spline waypoints
}

// A network packet event captured alongside movement frames.
// Enables correlating server events with physics frame state.
message PacketEvent {
    uint64 timestampMs = 1;        // Milliseconds since recording started (same clock as frames)
    uint32 opcode = 2;             // Movement opcode (MSG_MOVE_*, SMSG_MONSTER_MOVE, etc.)
    bool isOutbound = 3;           // true=client→server, false=server→client
    bytes payload = 4;             // Raw packet payload (movement info bytes)
    uint64 affectedGuid = 5;       // GUID of the unit this packet affects
}

// Movement data snapshot for physics recording
message MovementData {
    uint32 movementFlags = 1;
    uint32 fallTime = 2;
    float jumpVerticalSpeed = 3;
    float jumpSinAngle = 4;
    float jumpCosAngle = 5;
    float jumpHorizontalSpeed = 6;
    float swimPitch = 7;
    float walkSpeed = 8;
    float runSpeed = 9;
    float runBackSpeed = 10;
    float swimSpeed = 11;
    float swimBackSpeed = 12;
    float turnRate = 13;
    Position position = 14;
    float facing = 15;
    uint64 frameTimestamp = 16;  // Milliseconds since recording started
    // Transport data (populated when MOVEFLAG_ONTRANSPORT = 0x200 is set)
    uint64 transportGuid = 17;
    float transportOffsetX = 18;   // Local X position on transport
    float transportOffsetY = 19;   // Local Y position on transport
    float transportOffsetZ = 20;   // Local Z position on transport
    float transportOrientation = 21; // Local facing on transport
    float fallStartHeight = 22;    // Z at start of fall
    // Velocity data for physics calibration
    float currentSpeed = 23;       // Active speed from CMovementInfo+0x84
    float fallingSpeed = 24;       // Vertical fall velocity from static 0x0087D894
    // Nearby world objects
    repeated GameObjectSnapshot nearbyGameObjects = 25;
    repeated UnitSnapshot nearbyUnits = 26;
    // Spline data (populated when MOVEFLAG_SPLINE_ENABLED = 0x400000 is set)
    uint32 splineFlags = 27;
    Position splineFinalPoint = 28;
    uint64 splineTargetGuid = 29;
    float splineFinalOrientation = 30;
    int32 splineTimePassed = 31;
    int32 splineDuration = 32;
    uint32 splineId = 33;
    repeated Position splineNodes = 34;
    Position splineFinalDestination = 35;
}

// A complete movement recording session for physics engine testing
message MovementRecording {
    string characterName = 1;
    uint32 mapId = 2;
    string zoneName = 3;
    uint64 startTimestampUtc = 4;  // Unix timestamp in milliseconds
    uint32 frameIntervalMs = 5;    // Target interval between frames (e.g., 50ms)
    repeated MovementData frames = 6;
    string description = 7;        // User-provided description of the recording
    uint32 race = 8;               // Race enum value (1=Human, 2=Orc, ..., 8=Troll)
    uint32 gender = 9;             // Gender (0=Male, 1=Female)
    // Network packet log (movement opcodes captured during recording)
    repeated PacketEvent packets = 10;
}

// Reusable message for Item
message Item {
    uint64 id = 1;
    string name = 2;
    string slot = 3;
    uint32 quantity = 4;    
    map<uint32, uint32> stats = 5;
}